--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <div class="step-title">Paso 1 (0.5 minutos): Proyectar Diapositiva 6 "Estiramiento de Gato"</div>
             <div class="section-title">Diálogo del Maestro</div>
             <div class="dialogue">
-                Antes de empezar con el modelado, vamos a relajar un poco el cuerpo. Vamos a hacer el Estiramiento de Gato. Primero, arqueen la espalda y estiren los brazos hacia adelante, tal como lo haría un gato.
+                Antes de empezar con el modelado, vamos a relajar un poco el cuerpo. Vamos a hacer el Estiramiento de Gato. Primero, arqueen la espalda y estiren los brazos hacia adelante, tal como lo haría un gato. Ésta vez nos tomaremos un minuto entero, para estirarnos, concéntrense en sus estiramientos.
             </div>
         </div>
         <div class="section">
